@@ -1,3 +1,8 @@
+Tue Feb  3 23:36:25 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c (load_meta_themes): use
+	g_markup_printf_escaped instead of g_strdup_printf, #110564
+
 2004-01-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.2
